force-app/main/default/objects/MediationRequest__c/MediationRequest__c.object-meta.xml
<CustomObject>
    <label>斡旋依頼</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>斡旋依頼NO</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>