force-app/main/default/objects/MediationRequest__c/fields/AccountCapital__c.field-meta.xml
<CustomField>
    <fullName>AccountCapital__c</fullName>
    <formula>AccountName__r.Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>資本金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>