force-app/main/default/objects/MediationRequest__c/fields/AccountFax__c.field-meta.xml
<CustomField>
    <fullName>AccountFax__c</fullName>
    <formula>AccountName__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAX（代表）</label>
    <type>Text</type>
</CustomField>