force-app/main/default/objects/MediationRequest__c/fields/AccountNameKanaRealEstate__c.field-meta.xml
<CustomField>
    <fullName>AccountNameKanaRealEstate__c</fullName>
    <formula>AccountName__r.AccountKana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>名前カナ</label>
    <type>Text</type>
</CustomField>