force-app/main/default/objects/MediationRequest__c/fields/AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>AccountPhone__c</fullName>
    <formula>AccountName__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEL（代表）</label>
    <type>Text</type>
</CustomField>