force-app/main/default/objects/MediationRequest__c/fields/AccountRepresentative__c.field-meta.xml
<CustomField>
    <fullName>AccountRepresentative__c</fullName>
    <formula>AccountName__r.Representative__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代表者</label>
    <type>Text</type>
</CustomField>