force-app/main/default/objects/MediationRequest__c/fields/AConfirmTime__c.field-meta.xml
<CustomField>
    <fullName>AConfirmTime__c</fullName>
    <label>A確認時刻</label>
    <type>DateTime</type>
</CustomField>