force-app/main/default/objects/MediationRequest__c/fields/ActualPreviewDate__c.field-meta.xml
<CustomField>
    <fullName>ActualPreviewDate__c</fullName>
    <label>実内見日</label>
    <type>Date</type>
</CustomField>