force-app/main/default/objects/MediationRequest__c/fields/AdressCityLater__c.field-meta.xml
<CustomField>
    <fullName>AdressCityLater__c</fullName>
    <formula>AccountName__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>番地（市区以降）</label>
    <type>Text</type>
</CustomField>