force-app/main/default/objects/MediationRequest__c/fields/AgencySraffLastName__c.field-meta.xml
<CustomField>
    <fullName>AgencySraffLastName__c</fullName>
    <formula>LEFT(NewMatterId__r.DecisionAgencySraffName__c,  FIND(&quot; &quot;, NewMatterId__r.DecisionAgencySraffName__c) - 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仲介担当(姓)</label>
    <type>Text</type>
</CustomField>