force-app/main/default/objects/MediationRequest__c/fields/AgencyTraderNameCalc__c.field-meta.xml
<CustomField>
    <fullName>AgencyTraderNameCalc__c</fullName>
    <formula>RequestTraderId__r.Name</formula>
    <label>仲介業者名（数式）</label>
    <type>Text</type>
</CustomField>