force-app/main/default/objects/MediationRequest__c/fields/AtDecisionMoveDesiredDateNote2__c.field-meta.xml
<CustomField>
    <fullName>AtDecisionMoveDesiredDateNote2__c</fullName>
    <formula>DesiredCondition__r.AtDecisionMoveDesiredDateNote2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居希望日②コメント</label>
    <type>Text</type>
</CustomField>