force-app/main/default/objects/MediationRequest__c/fields/AtMediationSecondaryChecker__c.field-meta.xml
<CustomField>
    <fullName>AtMediationSecondaryChecker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>斡旋時二次チェック者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MediationRequestIdUserRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>