force-app/main/default/objects/MediationRequest__c/fields/AtMediationSecondaryCheckFreeSpace__c.field-meta.xml
<CustomField>
    <fullName>AtMediationSecondaryCheckFreeSpace__c</fullName>
    <label>斡旋時二次チェック_フリースペース</label>
    <type>TextArea</type>
</CustomField>