force-app/main/default/objects/MediationRequest__c/fields/BuissinessContent__c.field-meta.xml
<CustomField>
    <fullName>BuissinessContent__c</fullName>
    <formula>AccountName__r.BuissinessContent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>事業内容</label>
    <type>Text</type>
</CustomField>