force-app/main/default/objects/MediationRequest__c/fields/CarModel__c.field-meta.xml
<CustomField>
    <fullName>CarModel__c</fullName>
    <formula>DesiredCondition__r.CarModel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種</label>
    <type>Text</type>
</CustomField>