force-app/main/default/objects/MediationRequest__c/fields/ChangeMoveId1__c.field-meta.xml
<CustomField>
    <fullName>ChangeMoveId1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替入居ID</label>
    <referenceTo>Change__c</referenceTo>
    <relationshipName>MediationRequestIdChangeRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>