force-app/main/default/objects/MediationRequest__c/fields/ChangeMoveId2__c.field-meta.xml
<CustomField>
    <fullName>ChangeMoveId2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替入居ID2</label>
    <referenceTo>Change__c</referenceTo>
    <relationshipName>MediationRequestIdChangeRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>