force-app/main/default/objects/MediationRequest__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>AccountName__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>市区</label>
    <type>Text</type>
</CustomField>