force-app/main/default/objects/MediationRequest__c/fields/ConsignmentAccountName__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentAccountName__c</fullName>
    <formula>NewMatterId__r.Resident__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>委託企業名</label>
    <type>Text</type>
</CustomField>