force-app/main/default/objects/MediationRequest__c/fields/ContactNameKanaRealEstate__c.field-meta.xml
<CustomField>
    <fullName>ContactNameKanaRealEstate__c</fullName>
    <formula>MediationEmployeeId__r.Kana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>名前カナ</label>
    <type>Text</type>
</CustomField>