force-app/main/default/objects/MediationRequest__c/fields/ContactNameRealEstate__c.field-meta.xml
<CustomField>
    <fullName>ContactNameRealEstate__c</fullName>
    <formula>MediationEmployeeId__r.LastName +  MediationEmployeeId__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>名前</label>
    <type>Text</type>
</CustomField>