force-app/main/default/objects/MediationRequest__c/fields/ContactNote2__c.field-meta.xml
<CustomField>
    <fullName>ContactNote2__c</fullName>
    <label>連絡備考2</label>
    <type>TextArea</type>
</CustomField>