force-app/main/default/objects/MediationRequest__c/fields/ContractCategory__c.field-meta.xml
<CustomField>
    <fullName>ContractCategory__c</fullName>
    <label>成約区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>依頼前</fullName>
                <default>true</default>
                <label>依頼前</label>
            </value>
            <value>
                <fullName>依頼中</fullName>
            </value>
            <value>
                <fullName>成約</fullName>
            </value>
            <value>
                <fullName>他決</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>