force-app/main/default/objects/MediationRequest__c/fields/ContractHistoryCopied__c.field-meta.xml
<CustomField>
    <fullName>ContractHistoryCopied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>成約履歴転記済</label>
    <type>Checkbox</type>
</CustomField>