force-app/main/default/objects/MediationRequest__c/fields/ContractScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ContractScheduledDate__c</fullName>
    <label>契約予定日</label>
    <type>Date</type>
</CustomField>