force-app/main/default/objects/MediationRequest__c/fields/ContractStartDateBasic__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDateBasic__c</fullName>
    <formula>ServiceContractNewMatterAgency__r.ContractStartDateBasic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【規定】契約開始日（基本）</label>
    <type>Date</type>
</CustomField>