force-app/main/default/objects/MediationRequest__c/fields/ContractStartDateNotes__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDateNotes__c</fullName>
    <label>契約開始日_備考</label>
    <type>TextArea</type>
</CustomField>