force-app/main/default/objects/MediationRequest__c/fields/CoreCompanyId__c.field-meta.xml
<CustomField>
    <fullName>CoreCompanyId__c</fullName>
    <label>基幹企業ＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>