force-app/main/default/objects/MediationRequest__c/fields/CorporateHousingMoveDesiredDateNote__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingMoveDesiredDateNote__c</fullName>
    <formula>DesiredCondition__r.CorporateHousingMoveDesiredDateNote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居希望日①コメント</label>
    <type>Text</type>
</CustomField>