force-app/main/default/objects/MediationRequest__c/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>CorporateHousingRegulation__c</referenceTo>
    <relationshipName>MediationRegulationRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>