force-app/main/default/objects/MediationRequest__c/fields/CreateStaff__c.field-meta.xml
<CustomField>
    <fullName>CreateStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作成担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MediationRequestIdUserRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>