force-app/main/default/objects/MediationRequest__c/fields/DecisionContactDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionContactDate__c</fullName>
    <label>決定連絡日</label>
    <type>Date</type>
</CustomField>