force-app/main/default/objects/MediationRequest__c/fields/DecisionContactReceptionist__c.field-meta.xml
<CustomField>
    <fullName>DecisionContactReceptionist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決定連絡受付者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MediationRequestIdUserRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>