force-app/main/default/objects/MediationRequest__c/fields/DesiredBreadthLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>DesiredBreadthLowerLimit__c</fullName>
    <formula>DesiredCondition__r.DesiredBreadthLowerLimit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望広さ_下限（㎡）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>