force-app/main/default/objects/MediationRequest__c/fields/DesiredCondition__c.field-meta.xml
<CustomField>
    <fullName>DesiredCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>希望条件NO</label>
    <referenceTo>DesiredCondition__c</referenceTo>
    <relationshipLabel>斡旋依頼</relationshipLabel>
    <relationshipName>MediationRequest</relationshipName>
    <type>Lookup</type>
</CustomField>