force-app/main/default/objects/MediationRequest__c/fields/DesiredFloorPlan__c.field-meta.xml
<CustomField>
    <fullName>DesiredFloorPlan__c</fullName>
    <formula>IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;1R&quot; ) , &quot;1R&quot;, &quot;&quot; )+ 
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;1K&quot; ) , &quot;1K&quot;, &quot;&quot; )+ 
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;1DK&quot; ) , &quot;1DK&quot;, &quot;&quot; )+
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;1LDK&quot; ) , &quot;1LDK&quot;, &quot;&quot; )+ 
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;2DK&quot; ) , &quot;2DK&quot;, &quot;&quot; )+ 
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;2LDK&quot; ) , &quot;2LDK&quot;, &quot;&quot; )+ 
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;3DK&quot; ) , &quot;3DK&quot;, &quot;&quot; )+ 
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;3LDK&quot; ) , &quot;3LDK&quot;, &quot;&quot; )+ 
IF( INCLUDES( DesiredCondition__r.LayoutType__c , &quot;4DK&quot; ) , &quot;4DK&quot;, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望間取</label>
    <type>Text</type>
</CustomField>