force-app/main/default/objects/MediationRequest__c/fields/DesiredGetOffStation3__c.field-meta.xml
<CustomField>
    <fullName>DesiredGetOffStation3__c</fullName>
    <formula>DesiredCondition__r.DesiredGetOffStation3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望沿線3～駅</label>
    <type>Text</type>
</CustomField>