force-app/main/default/objects/MediationRequest__c/fields/DesiredGetOffStation4__c.field-meta.xml
<CustomField>
    <fullName>DesiredGetOffStation4__c</fullName>
    <formula>DesiredCondition__r.DesiredGetOffStation4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望沿線4～駅</label>
    <type>Text</type>
</CustomField>