force-app/main/default/objects/MediationRequest__c/fields/DesiredRealEstateRailway1__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateRailway1__c</fullName>
    <formula>DesiredCondition__r.DesiredRealEstateRailway1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望沿線1</label>
    <type>Text</type>
</CustomField>