force-app/main/default/objects/MediationRequest__c/fields/DesiredRealEstateRailway3__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateRailway3__c</fullName>
    <formula>DesiredCondition__r.DesiredRealEstateRailway3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望沿線3</label>
    <type>Text</type>
</CustomField>