force-app/main/default/objects/MediationRequest__c/fields/DesiredRealEstateRailway4__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateRailway4__c</fullName>
    <formula>DesiredCondition__r.DesiredRealEstateRailway4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望沿線4</label>
    <type>Text</type>
</CustomField>