force-app/main/default/objects/MediationRequest__c/fields/DesiredRealEstateStation2__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateStation2__c</fullName>
    <formula>DesiredCondition__r.DesiredRealEstateStation2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望沿線2駅～</label>
    <type>Text</type>
</CustomField>