force-app/main/default/objects/MediationRequest__c/fields/DesiredRealEstateStation4__c.field-meta.xml
<CustomField>
    <fullName>DesiredRealEstateStation4__c</fullName>
    <formula>DesiredCondition__r.DesiredRealEstateStation4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望沿線4駅～</label>
    <type>Text</type>
</CustomField>