force-app/main/default/objects/MediationRequest__c/fields/DesiredRentLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>DesiredRentLowerLimit__c</fullName>
    <formula>DesiredCondition__r.DesiredRentLowerLimit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望家賃_下限（円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>