force-app/main/default/objects/MediationRequest__c/fields/DesiredType__c.field-meta.xml
<CustomField>
    <fullName>DesiredType__c</fullName>
    <formula>IF( INCLUDES( DesiredCondition__r.DesiredRealEstateType__c , &quot;マンション&quot; ) , &quot;マンション&quot;, &quot;&quot; )+
IF( INCLUDES( DesiredCondition__r.DesiredRealEstateType__c , &quot;戸建て&quot; ) , &quot;戸建て&quot;, &quot;&quot; )+
IF( INCLUDES( DesiredCondition__r.DesiredRealEstateType__c , &quot;テラスハウス&quot; ) , &quot;テラスハウス&quot;, &quot;&quot; )+
IF( INCLUDES( DesiredCondition__r.DesiredRealEstateType__c , &quot;メゾネット&quot; ) , &quot;メゾネット&quot;, &quot;&quot; )+
IF( INCLUDES( DesiredCondition__r.DesiredRealEstateType__c , &quot;アパート&quot; ) , &quot;アパート&quot;, &quot;&quot; )+
IF( INCLUDES( DesiredCondition__r.DesiredRealEstateType__c , &quot;ハイツ&quot; ) , &quot;ハイツ&quot;, &quot;&quot; )+
IF( INCLUDES( DesiredCondition__r.DesiredRealEstateType__c , &quot;その他&quot; ) , &quot;その他&quot;, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望タイプ</label>
    <type>Text</type>
</CustomField>