force-app/main/default/objects/MediationRequest__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>手配先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>斡旋依頼 (手配先)</relationshipLabel>
    <relationshipName>Destination</relationshipName>
    <type>Lookup</type>
</CustomField>