force-app/main/default/objects/MediationRequest__c/fields/DisplayDocumentDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DisplayDocumentDeliveryAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>表示資料送付先</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MediationRequestIdContactRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>