force-app/main/default/objects/MediationRequest__c/fields/DocumentDeliveryAddressEmail1__c.field-meta.xml
<CustomField>
    <fullName>DocumentDeliveryAddressEmail1__c</fullName>
    <label>資料送付先メール</label>
    <type>Email</type>
</CustomField>