force-app/main/default/objects/MediationRequest__c/fields/DocumentDeliveryAddressEmail2__c.field-meta.xml
<CustomField>
    <fullName>DocumentDeliveryAddressEmail2__c</fullName>
    <label>資料送付先メール２</label>
    <type>Email</type>
</CustomField>