force-app/main/default/objects/MediationRequest__c/fields/DocumentDeliveryAddressHome2__c.field-meta.xml
<CustomField>
    <fullName>DocumentDeliveryAddressHome2__c</fullName>
    <label>資料送付先自宅２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>