force-app/main/default/objects/MediationRequest__c/fields/DocumentDeliveryAddressOther2__c.field-meta.xml
<CustomField>
    <fullName>DocumentDeliveryAddressOther2__c</fullName>
    <label>資料送付先その他２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>