force-app/main/default/objects/MediationRequest__c/fields/Door__c.field-meta.xml
<CustomField>
    <fullName>Door__c</fullName>
    <label>ドア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>