force-app/main/default/objects/MediationRequest__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <formula>NewMatterId__r.Resident__r.LastName + &apos; &apos; + NewMatterId__r.Resident__r.FirstName</formula>
    <label>社員名</label>
    <type>Text</type>
</CustomField>