force-app/main/default/objects/MediationRequest__c/fields/FamilySummaryMemo__c.field-meta.xml
<CustomField>
    <fullName>FamilySummaryMemo__c</fullName>
    <label>家族引き纏めメモ</label>
    <type>TextArea</type>
</CustomField>