force-app/main/default/objects/MediationRequest__c/fields/FirstContactDate__c.field-meta.xml
<CustomField>
    <fullName>FirstContactDate__c</fullName>
    <label>初回連絡日</label>
    <type>Date</type>
</CustomField>