force-app/main/default/objects/MediationRequest__c/fields/FloorPlanArea__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanArea__c</fullName>
    <formula>ServiceContractNewMatterAgency__r.FloorPlanArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【規定】間取面積</label>
    <type>Text</type>
</CustomField>