force-app/main/default/objects/MediationRequest__c/fields/FoursSetRequestDate__c.field-meta.xml
<CustomField>
    <fullName>FoursSetRequestDate__c</fullName>
    <label>四点セット依頼日</label>
    <type>Date</type>
</CustomField>