force-app/main/default/objects/MediationRequest__c/fields/FreeInvoiceMemoColumnIs__c.field-meta.xml
<CustomField>
    <fullName>FreeInvoiceMemoColumnIs__c</fullName>
    <label>フリー送付書メモ欄</label>
    <type>TextArea</type>
</CustomField>