force-app/main/default/objects/MediationRequest__c/fields/FreeInvoiceSendDate__c.field-meta.xml
<CustomField>
    <fullName>FreeInvoiceSendDate__c</fullName>
    <label>フリー送付書送付日</label>
    <type>Date</type>
</CustomField>