force-app/main/default/objects/MediationRequest__c/fields/FromSNTTeam__c.field-meta.xml
<CustomField>
    <fullName>FromSNTTeam__c</fullName>
    <label>SNT担当者より</label>
    <type>TextArea</type>
</CustomField>