force-app/main/default/objects/MediationRequest__c/fields/GarageComment__c.field-meta.xml
<CustomField>
    <fullName>GarageComment__c</fullName>
    <formula>DesiredCondition__r.GarageComment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>駐車場コメント</label>
    <type>Text</type>
</CustomField>