force-app/main/default/objects/MediationRequest__c/fields/Handbook__c.field-meta.xml
<CustomField>
    <fullName>Handbook__c</fullName>
    <label>しおり</label>
    <length>255</length>
    <type>Text</type>
</CustomField>