force-app/main/default/objects/MediationRequest__c/fields/IdenticalMatterMediationRequestTraderNam__c.field-meta.xml
<CustomField>
    <fullName>IdenticalMatterMediationRequestTraderNam__c</fullName>
    <label>他手配先</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>