force-app/main/default/objects/MediationRequest__c/fields/InaugurationDateSpare__c.field-meta.xml
<CustomField>
    <fullName>InaugurationDateSpare__c</fullName>
    <label>着任日備</label>
    <type>Date</type>
</CustomField>