force-app/main/default/objects/MediationRequest__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT(AccountName__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>業種</label>
    <type>Text</type>
</CustomField>