force-app/main/default/objects/MediationRequest__c/fields/IsDocumentDeliveryAddressHome2__c.field-meta.xml
<CustomField>
    <fullName>IsDocumentDeliveryAddressHome2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>表示資料送付先自宅2フラグ</label>
    <type>Checkbox</type>
</CustomField>