force-app/main/default/objects/MediationRequest__c/fields/IsDocumentDeliveryAddressMobile1__c.field-meta.xml
<CustomField>
    <fullName>IsDocumentDeliveryAddressMobile1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>表示資料送付先携帯フラグ</label>
    <type>Checkbox</type>
</CustomField>