force-app/main/default/objects/MediationRequest__c/fields/IsLostProgressDays__c.field-meta.xml
<CustomField>
    <fullName>IsLostProgressDays__c</fullName>
    <formula>(LostDate__c+14)&lt;=TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>他決日表示日数経過フラグ</label>
    <type>Checkbox</type>
</CustomField>