force-app/main/default/objects/MediationRequest__c/fields/IsNecessaryNoteExcept__c.field-meta.xml
<CustomField>
    <fullName>IsNecessaryNoteExcept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>要注意除外フラグ</label>
    <type>Checkbox</type>
</CustomField>