force-app/main/default/objects/MediationRequest__c/fields/IsPreviewDesired__c.field-meta.xml
<CustomField>
    <fullName>IsPreviewDesired__c</fullName>
    <formula>TEXT(DesiredCondition__r.IsPreviewDesired__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下見有無</label>
    <type>Text</type>
</CustomField>