force-app/main/default/objects/MediationRequest__c/fields/IsVictimsAidHouse__c.field-meta.xml
<CustomField>
    <fullName>IsVictimsAidHouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>被災者支援住宅フラグ</label>
    <type>Checkbox</type>
</CustomField>