force-app/main/default/objects/MediationRequest__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>職位</label>
    <length>255</length>
    <type>Text</type>
</CustomField>