force-app/main/default/objects/MediationRequest__c/fields/JurisdictionCode__c.field-meta.xml
<CustomField>
    <fullName>JurisdictionCode__c</fullName>
    <label>管轄コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>