force-app/main/default/objects/MediationRequest__c/fields/KtSystemFeasibility__c.field-meta.xml
<CustomField>
    <fullName>KtSystemFeasibility__c</fullName>
    <formula>TEXT(AccountName__r.ServiceContractNewMatter__r.KtSystemFeasibility__c)</formula>
    <label>KTシステムの可否</label>
    <type>Text</type>
</CustomField>