force-app/main/default/objects/MediationRequest__c/fields/LeaveDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveDate__c</fullName>
    <label>現住居退去日</label>
    <type>Date</type>
</CustomField>