force-app/main/default/objects/MediationRequest__c/fields/LeaveRealEstateDifference2__c.field-meta.xml
<CustomField>
    <fullName>LeaveRealEstateDifference2__c</fullName>
    <label>退去物件２との差分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>