force-app/main/default/objects/MediationRequest__c/fields/LeaveRealEstateDifference3__c.field-meta.xml
<CustomField>
    <fullName>LeaveRealEstateDifference3__c</fullName>
    <label>退去物件３との差分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>