force-app/main/default/objects/MediationRequest__c/fields/LeaveRealEstateDifference4__c.field-meta.xml
<CustomField>
    <fullName>LeaveRealEstateDifference4__c</fullName>
    <label>退去物件４との差分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>