force-app/main/default/objects/MediationRequest__c/fields/LeaveRealEstateIllegalAlert__c.field-meta.xml
<CustomField>
    <fullName>LeaveRealEstateIllegalAlert__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>退去物件不正アラート</label>
    <type>Text</type>
</CustomField>