force-app/main/default/objects/MediationRequest__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>ServiceContractNewMatterAgency__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【規定】立地</label>
    <type>Text</type>
</CustomField>