force-app/main/default/objects/MediationRequest__c/fields/MainBuissinessPartner__c.field-meta.xml
<CustomField>
    <fullName>MainBuissinessPartner__c</fullName>
    <formula>AccountName__r.MainBuissinessPartner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>主な取引先</label>
    <type>Text</type>
</CustomField>