force-app/main/default/objects/MediationRequest__c/fields/MarriageScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>MarriageScheduledDate__c</fullName>
    <label>結婚予定日</label>
    <type>Date</type>
</CustomField>