force-app/main/default/objects/MediationRequest__c/fields/MarriageScheduledDateNote__c.field-meta.xml
<CustomField>
    <fullName>MarriageScheduledDateNote__c</fullName>
    <label>結婚予定日備考</label>
    <type>TextArea</type>
</CustomField>