force-app/main/default/objects/MediationRequest__c/fields/MediationAtArrangeComment1__c.field-meta.xml
<CustomField>
    <fullName>MediationAtArrangeComment1__c</fullName>
    <label>斡旋手配時コメント１</label>
    <type>TextArea</type>
</CustomField>