force-app/main/default/objects/MediationRequest__c/fields/MediationEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>MediationEmployeeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社員連絡先</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>斡旋依頼 (斡旋社員ＩＤ)</relationshipLabel>
    <relationshipName>MediationRequestIdContactRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>