force-app/main/default/objects/MediationRequest__c/fields/MediationInputDate__c.field-meta.xml
<CustomField>
    <fullName>MediationInputDate__c</fullName>
    <label>斡旋入力日</label>
    <type>Date</type>
</CustomField>