force-app/main/default/objects/MediationRequest__c/fields/MediationRequestAdditionDocument__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestAdditionDocument__c</fullName>
    <label>斡旋依頼書追加書面</label>
    <length>255</length>
    <type>Text</type>
</CustomField>