force-app/main/default/objects/MediationRequest__c/fields/MediationRequestHomePhone__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestHomePhone__c</fullName>
    <label>斡旋依頼書自宅電話</label>
    <type>Phone</type>
</CustomField>