force-app/main/default/objects/MediationRequest__c/fields/MediationRequestId__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestId__c</fullName>
    <externalId>true</externalId>
    <label>斡旋依頼ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>