force-app/main/default/objects/MediationRequest__c/fields/MediationRequestMobilePhone1__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestMobilePhone1__c</fullName>
    <label>斡旋依頼書携帯電話1</label>
    <type>Phone</type>
</CustomField>