force-app/main/default/objects/MediationRequest__c/fields/MediationRequestOtherDestination__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestOtherDestination__c</fullName>
    <label>斡旋依頼書その他宛先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>