force-app/main/default/objects/MediationRequest__c/fields/MediationRequestOtherFax__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestOtherFax__c</fullName>
    <label>斡旋依頼書その他FAX</label>
    <type>Phone</type>
</CustomField>