force-app/main/default/objects/MediationRequest__c/fields/MediationRequestSendDateTime__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestSendDateTime__c</fullName>
    <label>斡旋依頼送信日時</label>
    <type>DateTime</type>
</CustomField>