force-app/main/default/objects/MediationRequest__c/fields/MediationResultSendDate__c.field-meta.xml
<CustomField>
    <fullName>MediationResultSendDate__c</fullName>
    <label>斡旋結果送信日</label>
    <type>Date</type>
</CustomField>