force-app/main/default/objects/MediationRequest__c/fields/MediationSpecialContract1__c.field-meta.xml
<CustomField>
    <fullName>MediationSpecialContract1__c</fullName>
    <label>斡旋特約1</label>
    <type>TextArea</type>
</CustomField>