force-app/main/default/objects/MediationRequest__c/fields/MediationSpecialContract2__c.field-meta.xml
<CustomField>
    <fullName>MediationSpecialContract2__c</fullName>
    <label>斡旋特約2</label>
    <type>TextArea</type>
</CustomField>