force-app/main/default/objects/MediationRequest__c/fields/MediationSpecialContract4__c.field-meta.xml
<CustomField>
    <fullName>MediationSpecialContract4__c</fullName>
    <label>斡旋特約4</label>
    <type>TextArea</type>
</CustomField>