force-app/main/default/objects/MediationRequest__c/fields/MediationType__c.field-meta.xml
<CustomField>
    <fullName>MediationType__c</fullName>
    <label>斡旋形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>