force-app/main/default/objects/MediationRequest__c/fields/MoveDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>MoveDesiredDate__c</fullName>
    <formula>DesiredCondition__r.MoveDesiredDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居希望日①</label>
    <type>Date</type>
</CustomField>