force-app/main/default/objects/MediationRequest__c/fields/MovingReason__c.field-meta.xml
<CustomField>
    <fullName>MovingReason__c</fullName>
    <formula>NewMatterId__r.Application__r.MoveReason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>転居理由</label>
    <type>Text</type>
</CustomField>