force-app/main/default/objects/MediationRequest__c/fields/NewAffiliationName__c.field-meta.xml
<CustomField>
    <fullName>NewAffiliationName__c</fullName>
    <formula>DesiredCondition__r.NewAffiliationName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>新所属</label>
    <type>Text</type>
</CustomField>