force-app/main/default/objects/MediationRequest__c/fields/NewMatterId__c.field-meta.xml
<CustomField>
    <fullName>NewMatterId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約手続き</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>斡旋依頼 (新規No)</relationshipLabel>
    <relationshipName>MediationRequestIdNewMatterRelation10</relationshipName>
    <type>Lookup</type>
</CustomField>