force-app/main/default/objects/MediationRequest__c/fields/NewWorkLocationAdress__c.field-meta.xml
<CustomField>
    <fullName>NewWorkLocationAdress__c</fullName>
    <formula>DesiredCondition__r.NewWorkLocationAdress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>新所属住所</label>
    <type>Text</type>
</CustomField>