force-app/main/default/objects/MediationRequest__c/fields/OtherConditionFree__c.field-meta.xml
<CustomField>
    <fullName>OtherConditionFree__c</fullName>
    <formula>DesiredCondition__r.OtherConditionFree__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>その他条件フリー</label>
    <type>Text</type>
</CustomField>